name:                ratatoskr
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Simon Højberg
maintainer:          r.hackr@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     App
  other-modules:       Source
                     , UI
                     , Util
                     , RemoteData
                     , Story
                     , Screen
  build-depends:       base
                     , brick
                     , vty
                     , uuid
                     , text
                     , time
                     , http-conduit
                     , bytestring
                     , aeson
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ratatoskr-exe
  main-is:             Main.hs
  build-depends:       base
                     , ratatoskr
  hs-source-dirs:      exe
  default-language:    Haskell2010
